[gd_scene load_steps=7 format=3 uid="uid://br6kjkwotfs8l"]

[ext_resource type="PackedScene" uid="uid://cvnae2jand31t" path="res://OtherScenes/hit_box_component.tscn" id="1_54hwd"]
[ext_resource type="Script" path="res://OtherScenes/bullet.gd" id="1_vbtnj"]
[ext_resource type="Script" path="res://OtherScenes/BulletBehavior.gd" id="2_3wvvj"]

[sub_resource type="Animation" id="Animation_t41u7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a4dq5"]
resource_name = "reflected"
length = 0.06
loop_mode = 1
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7r83"]
_data = {
"RESET": SubResource("Animation_t41u7"),
"reflected": SubResource("Animation_a4dq5")
}

[node name="Bullet" type="Node2D"]
script = ExtResource("1_vbtnj")
bullet_speed = 400

[node name="BulletBehavior" type="Node" parent="."]
script = ExtResource("2_3wvvj")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HitBoxComponent" parent="." instance=ExtResource("1_54hwd")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ReflectDestroy" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ReflectAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7r83")
}

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
